# dbus-sharp

./: .gitignore  Makefile.am  Makefile.include  Makefile.include.in  SharedAssemblyInfo.cs.in  configure.ac  dbus-sharp.sln
daemon/: AssemblyInfo.cs  Daemon.cs  Makefile.am  Server.cs  ServerBus.cs  dbus-daemon.csproj
m4/: mono.m4  nuget.m4
src/: Bus.cs  BusObject.cs  Connection.cs  DProxy.cs  ExportObject.cs  Makefile.am  Mapper.cs  TypeImplementer.cs  dbus-sharp.csproj
src/Data Structures/: InterfaceTree.cs
src/Protocol/: Header.cs  MessageReader.cs
tests/: AddressTest.cs  AssemblyInfo.cs  BusTests.cs  ExportInterfaceTest.cs  ExportInterfaceTestExtended.cs  IntrospectorTest.cs  Makefile.am  MapperTest.cs  MarshalByRefObjectTest.cs  MatchRuleTest.cs  MessageReaderTest.cs  ObjectPathTest.cs  SignatureTest.cs  dbus-sharp-tests.csproj
tests/Integration/: ExportInterfaceTest.cs  ExportInterfaceTestExtended.cs  IntrospectorTest.cs  MarshalByRefObjectTest.cs  RenamedInterfaceTest.cs
tests/Unit/: AddressTest.cs  AuthenticationTest.cs  BusTests.cs  MapperTest.cs  MatchRuleTest.cs  MessageReaderTest.cs  MessageWriterTest.cs  ObjectPathTest.cs  SignatureTest.cs
tools/: AssemblyInfo.cs  Makefile.am  dbus-monitor.csproj
